fixed letter spacing on phone

--- a/src/about-us/about-us.component.css
+++ b/src/about-us/about-us.component.css
@@ -135,6 +135,7 @@ a {
 
   .contact-title {
     font-size: 2rem;
+    letter-spacing: 2px;
   }
 
   .about-left {
