--- a/src/chromatic-awakening/chromatic-awakening.component.css
+++ b/src/chromatic-awakening/chromatic-awakening.component.css
@@ -199,6 +199,7 @@ hr {
 
   .area-title {
     font-size: 2rem;
+    letter-spacing: 2px;
   }
 
   .area-right p {
